--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -76,5 +76,19 @@
     "hour": "год.",
     "minute": "хв.",
     "second": "с."
+  },
+  "months": {
+    "january": "січня",
+    "february": "лютого",
+    "march": "березня",
+    "april": "квітня",
+    "may": "травня",
+    "june": "червня",
+    "july": "липня",
+    "august": "серпня",
+    "september": "вересня",
+    "october": "жовтня",
+    "november": "листопада",
+    "december": "грудня"
   }
 }
