🌾|🗼 --- add month localization to notifications screen

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -78,17 +78,17 @@
     "second": "сек."
   },
   "months": {
-    "january": "janvier",
-    "february": "février",
-    "march": "mars",
-    "april": "avril",
-    "may": "mai",
-    "june": "juin",
-    "july": "juillet",
-    "august": "août",
-    "september": "septembre",
-    "october": "octobre",
-    "november": "novembre",
-    "december": "décembre"
+    "january": "января",
+    "february": "февраля",
+    "march": "марта",
+    "april": "апреля",
+    "may": "мая",
+    "june": "июня",
+    "july": "июля",
+    "august": "августа",
+    "september": "сентября",
+    "october": "октября",
+    "november": "ноября",
+    "december": "декабря"
   }
 }
