--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -56,19 +56,19 @@
   },
   "settings": {
     "mainTitle": "Налаштування",
-    "language": "Мова",
-    "theme": "Тема застосунку",
-    "profile": "Налаштування профілю",
-    "account": "Налаштування облікового запису",
-    "QRcode": "Сканувати QR-код",
-    "premium": "Slipe Premium",
-    "notifications": "Сповіщення",
-    "appIcon": "Піктограма застосунку",
-    "appRestictions": "Обмеження застосунку",
-    "experemental": "Експериментальні функції",
-    "developers": "Для розробників",
-    "PP": "Політика конфіденційності",
-    "ToS": "Умови користування"
+    "settingsLanguage": "Мова",
+    "settingsTheme": "Тема застосунку",
+    "settingsProfile": "Налаштування профілю",
+    "settingsAccount": "Налаштування облікового запису",
+    "settingsQRcode": "Сканувати QR-код",
+    "settingsPremium": "Slipe Premium",
+    "settingsNotifications": "Сповіщення",
+    "settingsAppIcon": "Піктограма застосунку",
+    "settingsAppRestictions": "Обмеження застосунку",
+    "settingsExperemental": "Експериментальні функції",
+    "settingsDevelopers": "Для розробників",
+    "settingsPP": "Політика конфіденційності",
+    "settingsToS": "Умови користування"
   },
   "register": {
     "title": "Зареєструватися",
