🍝|🤹🏿‍♂️ --- Completed language change setting, improved storage function and etc.

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -56,19 +56,19 @@
   },
   "settings": {
     "mainTitle": "Настройки",
-    "language": "Язык",
-    "theme": "Тема приложения",
-    "profile": "Настройки профиля",
-    "account": "Настройки аккаунта",
-    "QRcode": "Сканировать QR-code",
-    "premium": "Slipe Premium",
-    "notifications": "Уведомления",
-    "appIcon": "Иконка приложения",
-    "appRestictions": "Доступы приложения",
-    "experemental": "Экспериментальные",
-    "developers": "Для разработчиков",
-    "PP": "Политика конфиденциальности",
-    "ToS": "Условия обслуживания"
+    "settingsLanguage": "Язык",
+    "settingsTheme": "Тема приложения",
+    "settingsProfile": "Настройки профиля",
+    "settingsAccount": "Настройки аккаунта",
+    "settingsQRcode": "Сканировать QR-code",
+    "settingsPremium": "Slipe Premium",
+    "settingsNotifications": "Уведомления",
+    "settingsAppIcon": "Иконка приложения",
+    "settingsAppRestictions": "Доступы приложения",
+    "settingsExperemental": "Экспериментальные",
+    "settingsDevelopers": "Для разработчиков",
+    "settingsPP": "Политика конфиденциальности",
+    "settingsToS": "Условия обслуживания"
   },
   "register": {
     "title": "Зарегистрироваться",
