🤘🏽|🧑🏼‍🦯‍➡️ --- Added gap to settingRow, improved haptics in toggle and checkbox and renamed slipe premium for hindi language

--- a/src/locales/hi.json
+++ b/src/locales/hi.json
@@ -61,7 +61,7 @@
       "settingsProfile": "प्रोफ़ाइल सेटिंग्स",
       "settingsAccount": "खाता सेटिंग्स",
       "settingsQRcode": "QR-कोड स्कैन करें",
-      "settingsPremium": "Slipe प्रीमियम",
+      "settingsPremium": "Slipe Premium",
       "settingsNotifications": "सूचनाएँ",
       "settingsAppIcon": "ऐप आइकन",
       "settingsAppRestictions": "ऐप अनुमतियाँ",
