🧑🏼‍🤝‍🧑🏿|🏵️ --- Added all auth screen (just started) and etc.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -78,7 +78,18 @@
     "welcome_creativity": "Creativity",
     "welcome_subtitle": "Let's go",
     "footer_button": "Start creating",
-    "footer_button_next": "Continue"
+    "footer_button_next": "Continue",
+    "footer_policy": "By signing up, you agree to our Terms of Use",
+    "username_title": "Enter username",
+    "username_tip": "Username must be 2-24 symbols length, and contain only a-Z, 0-9, and (.) (-) (_)",
+    "username_placeholder": "username.slipe.fun",
+    "username_nickname_placeholder": "Nickname (optional)",
+    "password_title": "Enter password",
+    "password_tip": "The password must consist of 2–64 characters and contain any characters.",
+    "password_placeholder": "password",
+    "password_confirm_placeholder": "Confirm password",
+    "avatar_title": "Select an avatar"
+
   },
   "timeUnits": {
     "year": "yr",
