🧑🏾‍🎨|🧝‍♂️ --- Added profile screen opening through avatar/username press (totally shitcode on profileScreen)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,8 +1,8 @@
 {
   "navigation": {
-    "blogs": "Feed",
-    "search": "Search",
-    "profile": "Profile"
+    "tab_blogs": "Feed",
+    "tab_search": "Search",
+    "tab_profile": "Profile"
   },
   "profile": {
     "edit": "Edit",
